@@ -843,8 +843,8 @@ class CommandAction(_ActionAction):
         _ActionAction.__init__(self, **kw)
         if is_List(cmd):
             if [c for c in cmd if is_List(c)]:
-                raise TypeError("CommandAction should be given only " \
-                      "a single command")
+                raise TypeError("CommandAction should be given only "
+                                "a single command")
         self.cmd_list = cmd
 
     def __str__(self):
