@@ -132,9 +132,9 @@ def initialize_do_splitdrive():
     global do_splitdrive
     global has_unc
     drive, path = os.path.splitdrive('X:/foo')
-    # splitunc is removed from python 3.7 and newer  
+    # splitunc is removed from python 3.7 and newer
     # so we can also just test if splitdrive works with UNC
-    has_unc = (hasattr(os.path, 'splitunc') 
+    has_unc = (hasattr(os.path, 'splitunc')
         or os.path.splitdrive(r'\\split\drive\test')[0] == r'\\split\drive')
 
     do_splitdrive = not not drive or has_unc
@@ -1397,10 +1397,10 @@ class FS(LocalFS):
             if not isinstance(d, SCons.Node.Node):
                 d = self.Dir(d)
             self.Top.addRepository(d)
-    
+
     def PyPackageDir(self, modulename):
         """Locate the directory of a given python module name
-		
+
         For example scons might resolve to
         Windows: C:\Python27\Lib\site-packages\scons-2.5.1
         Linux: /usr/lib/scons
@@ -3305,7 +3305,7 @@ class File(Base):
                 try: node = dir.entries[norm_name]
                 except KeyError: node = dir.file_on_disk(self.name)
                 if node and node.exists() and \
-                   (isinstance(node, File) or isinstance(node, Entry) \
+                   (isinstance(node, File) or isinstance(node, Entry)
                     or not node.is_derived()):
                         result = node
                         # Copy over our local attributes to the repository
