@@ -152,6 +152,8 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Stop using deprecated unittest asserts
     - messages in strip-install-dir test now os-neutral
     - Add xz compression format to packaging choices.
+    - Syntax cleanups - trailing blanks, use "is" to compare with None, etc.
+      Three uses of variables not defined are changed.
     
   From Hao Wu
     - typo in customized decider example in user guide 
